correct footer nav

--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
         </div>
         <footer class="flex_container flex-row">
             <nav class="footer_nav">
-                <a href="" class="flex-items">© 2022 Oracle</a>
+                <a href="" class="flex-items footer_nav_link">© 2022 Oracle</a>
                 <a href="">Sélectionner une langue</a>
-                <a href="" class="flex-items">Support technique</a>
-                <a href="" class="flex-items">Politique de confidentialité</a>
-                <a href="" class="flex-items">Conditions d'utilisation</a>
-                <a href="" class="flex-items">Trademarks</a>
+                <a href="" class="flex-items footer_nav_link">Support technique</a>
+                <a href="" class="flex-items footer_nav_link">Politique de confidentialité</a>
+                <a href="" class="flex-items footer_nav_link">Conditions d'utilisation</a>
+                <a href="" class="flex-items footer_nav_link">Trademarks</a>
             </nav>
         </footer>
     </body>
