correct footer nav

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <footer class="flex_container flex-row">
             <nav class="footer_nav">
                 <a href="" class="flex-items footer_nav_link">© 2022 Oracle</a>
-                <a href="">Sélectionner une langue</a>
+                <a href="" class="flex-items footer_nav_link">Sélectionner une langue</a>
                 <a href="" class="flex-items footer_nav_link">Support technique</a>
                 <a href="" class="flex-items footer_nav_link">Politique de confidentialité</a>
                 <a href="" class="flex-items footer_nav_link">Conditions d'utilisation</a>
